# django-ecommerce

./: .dockerignore  .gitignore  4  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.yaml  liara.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: liara.yaml
backend/: requirements.txt
backend/.github/workflows/: ci.yml
backend/accounts/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_address_user.py  0003_alter_user_avatar.py
backend/admin/: urls.py  views.py
backend/core/: admin.py  context_processors.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_product_description.py  0002_alter_product_options.py
backend/ecommerce/: middleware.py  settings.py  urls.py
backend/order/: admin.py  models.py  urls.py  views.py
backend/order/migrations/: 0001_initial.py
backend/shop/: admin.py  context_processor.py  forms.py  models.py  urls.py  views.py
backend/shop/migrations/: 0001_initial.py  (+11 more)
backend/shopping_cart/: context_processors.py  managers.py  models.py  tests.py  urls.py  views.py
backend/static/: alerts.js  bootstrap.css  bootstrap.js  global.css  htmx.js  htmx.min.js  main.css  main.js  shopping_cart.js  single_product.js
backend/templates/: 404.html  base.html
ecommerce/: settings.py
frontend/: webpack.config.js
frontend/js/: bootstrap.js  main.js  single_product.js
frontend/scss/: bootstrap.scss
templates/: base.html
(+69 files in other folders)
