[tool.poetry]
name = "django-ecommerce"
version = "0.1.0"
description = "An ecommerce website built with django & bootstrap"
authors = ["mostafaei2002 <sinamostafaei2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
django = "^5.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
